--- a/info.html
+++ b/info.html
@@ -11,11 +11,12 @@
    <footer>
     <footer>
   <div class="slider-row">
-    <span class="slider3"><a href="home-page.html">&#60;</a></span>
+    <span class="slider3"><a href="index.html">&#60;</a></span>
     <span class="slider1"><a href="contact.html">&#62;</a></span>
   </div>
 </footer>
    </footer>
   </footer>
   </body>
+
 </html>
