--- a/contact.html
+++ b/contact.html
@@ -33,8 +33,9 @@
         For more information and content, follow us on facebook:
         <img class="fbk" src="img/fbk.png">
         <a href="https://www.facebook.com/photo.php?fbid=61577183162321">fbk-Vhakula</a>
-        <p> <span class="fot">Website develod and deployed by Daryl-Mufassa 073 952 5206  <img class="fbk" src="img/wht.logo.png"> </span></p>
+        <p> <span class="fot">Website developed and deployed by Daryl-Mufassa 073 952 5206  <img class="fbk" src="img/wht.logo.png"> </span></p>
       </div>
     </footer>
   </body>
+
 </html>
